--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Tarragon</title>
+    <title>HotWallet</title>
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#000000">
     <!-- Windows Phone -->
