--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>HotWallet</title>
+    <meta property="og:title" content="HotWallet Cryptocurrency Management">
+    <meta property="og:description" content="No login required. Track your portfolio with Ledger Connect, Trezor Connect, Binance Connect and manual entry. All major fiat currencies are supported.">
+    <meta property="og:image" content="https://hotwallet.com/hotwallet-1200x630.png">
+    <meta property="og:url" content="https://hotwallet.com/">
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#000000">
     <!-- Windows Phone -->
