--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>HotWallet</title>
     <meta property="og:title" content="HotWallet Cryptocurrency Management">
-    <meta property="og:description" content="No login required. Track your portfolio with Ledger Connect, Trezor Connect, Binance Connect and manual entry. All major fiat currencies are supported.">
+    <meta property="og:description" content="No login required. Connect Ledger, Trezor, Binance and more. All major fiat currencies are supported.">
     <meta property="og:image" content="https://hotwallet.com/hotwallet-1200x630.png">
     <meta property="og:url" content="https://hotwallet.com/">
     <!-- Chrome, Firefox OS and Opera -->
