add open source to description

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://hotwallet.com/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="HotWallet Cryptocurrency Management">
-    <meta name="twitter:description" content="No login required. Connect Ledger, Trezor, Binance and more. All major fiat currencies are supported.">
+    <meta name="twitter:description" content="No login required. Connect Ledger, Trezor, Binance and more. All major crypto and fiat currencies supported. Open source.">
     <meta name="twitter:image" content="https://hotwallet.com/hotwallet-1200x630.png">
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#000000">
