--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- temporary until trezor/connect/pull/229 is fixed -->
+    <script src="https://connect.trezor.io/5/trezor-connect.js"></script>
   </body>
 </html>
