--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>HotWallet</title>
-    <meta property="og:title" content="HotWallet Cryptocurrency Platform">
+    <meta property="og:title" content="HotWallet Cryptoasset Platform">
     <meta property="og:description" content="No login required. Connect Ledger, Trezor, Binance and more. All major crypto and fiat currencies.">
     <meta property="og:image" content="https://hotwallet.com/hotwallet-1200x630.png">
     <meta property="og:url" content="https://hotwallet.com/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="HotWallet Cryptocurrency Platform">
+    <meta name="twitter:title" content="HotWallet Cryptoasset Platform">
     <meta name="twitter:description" content="No login required. Open source. Connect Ledger, Trezor, Binance and more. All major crypto and fiat currencies.">
     <meta name="twitter:image" content="https://hotwallet.com/hotwallet-1200x630.png">
     <!-- Chrome, Firefox OS and Opera -->
