--- a/public/iframe.html
+++ b/public/iframe.html
@@ -1,13 +1,5 @@
 <html>
-  <head>
-    <style>
-      body {
-        color: #fff;
-        padding: 0;
-        margin: 0;
-      }
-    </style>
-  </head>
+  <head></head>
   <body>
     <main></main>
     <script src="/HotWalletApp.js"></script>
