--- a/public/iframe.html
+++ b/public/iframe.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <link>
+    <link rel="stylesheet" type="text/css" href="/HotWalletApp.css" />
+  </head>
   <body>
     <main></main>
     <script src="/HotWalletApp.js"></script>
