fix cordova.js path

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/cordova.js"></script>
     <!-- temporary until trezor/connect/pull/229 is fixed -->
     <script src="https://connect.trezor.io/5/trezor-connect.js"></script>
   </body>
